[package]
name = "lz-str-wasm"
version = "0.0.0"
edition = "2024"
description = "A WebAssembly binding for lz-str"
repository = "https://github.com/adumbidiot/lz-str-rs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
js-sys = "0.3.83"
lz-str = { path = "../.." }
wasm-bindgen = "0.2.106"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",

    # See: https://github.com/drager/wasm-pack/issues/1501
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
]

[features]
rustc-hash = [
    "lz-str/rustc-hash",
]
